# procrastinase

./: CMakeLists.txt  README.md  comments.txt
src/: foreign_window.hpp  foreign_window_xcb.cpp  private_xcb.h  private_xcb.hpp  procrastinase.hpp  program_list.cpp  program_list.hpp  queue.hpp  skeleton.cpp  statistics.cpp  statistics.hpp  timer.hpp  window_watcher.cpp  window_watcher.hpp  window_watcher_xcb.cpp
uml/: Makefile  classes.dia
